--- a/android/build.gradle
+++ b/android/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     }
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation  'com.android.support:multidex:1.0.2'
-    api project(path: ':FORTSDKv1.5')
+    api project(path: ':FORTSDKv1.6')
     api 'com.victor:lib:1.0.1'
     api 'com.google.code.gson:gson:2.8.0'
     api 'com.shamanland:fonticon:0.1.8'
@@ -61,6 +61,8 @@ dependencies {
     api 'org.bouncycastle:bcprov-jdk16:1.46'
     api 'commons-codec:commons-codec:1.10'
     implementation 'org.jetbrains:annotations:15.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.android.volley:volley:1.1.1'
+     implementation 'com.victor:lib:1.0.1'
 }
   
